--- a/Blog_Turismo/index.html
+++ b/Blog_Turismo/index.html
@@ -81,26 +81,32 @@
               <img id="post-img" src="img/sal2.jpg" alt="catedral">
             </div>
             <p>En 2007 mediante un concurso para elegir las 7 Maravillas de Colombia; la Catedral de Sal obtuvo la mayor votación; convirtiéndola en la Maravilla No.1 de Colombia, aunque también fue propuesta entre las Nuevas siete maravillas del mundo moderno.</p>
+            <div class="input-field col s10">
+              <textarea id="texto" class="materialize-textarea"></textarea>
+              <label for="texto">Deja tu comentario</label>
+            </div>
           </div>
-          <div class="row col l4 hide-on-med-and-down #00897b teal darken-1">
-            autor
+          <div id="autor" class="row col l4 hide-on-med-and-down">
+            <div class="col l12 center">
+              <img id="autor-img" src="img/autor.jpg" alt="">
+            </div>
+            <div class="card-panel">
+              <span id="descripcion"class="deep-black-text justify text-darken-1">Soy una persona respetuosa, honesta, puntual, discreto, y comprometido con mi labor; me gusta trabajar en equipo de manera responsable, disciplinada y ordenada lo cual me permite ser ejemplo y líder para el entrenamiento, desempeño, evaluación como también satisfacción de los servicios ofrecidos. Cuento con un alto grado de conocimientos, especialmente en programación, redes, mantenimiento y ensamble, instalación de sistemas operativos, docencia en informática. Actúo con agilidad, eficacia y reacciono de forma proactiva ante cualquier situación de emergencia.</span>
+            </div>
           </div>
         </div>
         <div class="row">
           <div id="post" class="row col l8 m12 s12">
-            <div class="col l6">
-              <img id="post-img" src="img/sal1.jpg" alt="catedral">
+            <p>Con una cascada de cerca de 300 metros de caída, Santo Candelas, ubicado en el lecho del río Cusiana, en la vereda Corinto del municipio de Pajarito, es un maravilloso lugar para dar y convidar. En una época no se conocía este ambiente natural, este accidente hidrográfico y topográfico, hoy en día se convierte en una sensacional alternativa de admiración y disfrute.</p>
+            <div class="col l12 m12 s12">
+              <img id="post-img" src="img/salto2.jpg" alt="catedral">
+              <img id="post-img" src="img/salto1.jpg" alt="catedral">
             </div>
-            <p>La Catedral de Sal es un recinto construido en el interior de las minas de sal de Zipaquirá, en el departamento de Cundinamarca, Colombia. El diseño arquitectónico y artístico de la nueva Catedral de Sal, es propio del arquitecto bogotano Roswell Garavito Pearl, el cual salió aprobado tras la elección del proyecto que contenía un total de 44 propuestas en un concurso convocado por la Sociedad Colombiana de Arquitectos en 1990; mientras que la dirección técnica de ingeniería fue ejecutada por el ingeniero bogotano Jorge Enrique Castelblanco Reyes.</p>
-            <p>En su interior se encuentra una rica colección artística, especialmente de esculturas de sal y mármol en un ambiente lleno de un profundo sentido religioso que atrae a turistas. La catedral de Sal de Zipaquirá es considerada como uno de los logros arquitectónicos y artísticos más notables de la arquitectura colombiana, por lo que se le ha otorgado incluso el título de joya arquitectónica de la modernidad. La importancia de la Catedral, radica en su valor como patrimonio cultural, religioso y ambiental.</p>
-
-
-            <p>La Catedral de Sal es un recinto construido en el interior de las minas de sal de Zipaquirá, en el departamento de Cundinamarca, Colombia. El diseño arquitectónico y artístico de la nueva Catedral de Sal, es propio del arquitecto bogotano Roswell Garavito Pearl, el cual salió aprobado tras la elección del proyecto que contenía un total de 44 propuestas en un concurso convocado por la Sociedad Colombiana de Arquitectos en 1990; mientras que la dirección técnica de ingeniería fue ejecutada por el ingeniero bogotano Jorge Enrique Castelblanco Reyes.</p>
-            <p>En su interior se encuentra una rica colección artística, especialmente de esculturas de sal y mármol en un ambiente lleno de un profundo sentido religioso que atrae a turistas. La catedral de Sal de Zipaquirá es considerada como uno de los logros arquitectónicos y artísticos más notables de la arquitectura colombiana, por lo que se le ha otorgado incluso el título de joya arquitectónica de la modernidad. La importancia de la Catedral, radica en su valor como patrimonio cultural, religioso y ambiental.</p>
-            <div class="col l6">
-              <img id="post-img" src="img/sal2.jpg" alt="catedral">
+            <p>Inserto en un lugar paradisiaco, al que se llega por un sendero ecoturístico de aproximadamente cinco kilómetros, en los que hay que atravesar un bosque milenario y pequeños puentes, que permiten sortear pequeños cocientes de aguas cristalina, el lugar invita a sobrecogerse por sus colosales dimensiones y vistosidad.</p>
+          <div class="input-field col s10">
+              <textarea id="texto" class="materialize-textarea"></textarea>
+              <label for="texto">Deja tu comentario</label>
             </div>
-            <p>En 2007 mediante un concurso para elegir las 7 Maravillas de Colombia; la Catedral de Sal obtuvo la mayor votación; convirtiéndola en la Maravilla No.1 de Colombia, aunque también fue propuesta entre las Nuevas siete maravillas del mundo moderno.</p>
           </div>
         </div>
       </div>
